Fix some layout issues, favorites pages

--- a/assets/styles/favorites.css
+++ b/assets/styles/favorites.css
@@ -25,8 +25,9 @@ img.video-thumbnail {
 .video-description {
 	padding: 10px;
 }
+#music-grid
 a,
-a:hover {
+#music-grid a:hover {
 	color: black;
 }
 
