--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -22,6 +22,7 @@ li {
 	margin-bottom: 2rem;
 }
 .headline h1,
+.headline h2,
 .headline p {
 	margin-top: 0;
 	margin-bottom: 0;
@@ -203,10 +204,18 @@ a[target='_blank']::after {
 .smaller {
 	font-size: small;
 }
-@media (max-width: 499px) {
-	.logo {
-		font-size: 2rem;
+@media (max-width: 839px) {
+  .logo {
+		font-size: 2.5rem;
 	}
+  .menu-item {
+    font-size: .8rem;
+  }
+}
+@media (max-width: 838px) {
+
+}
+@media (max-width: 499px) {
 	.headline {
 		font-size: 1rem;
 	}
@@ -249,6 +258,7 @@ a[target='_blank']::after {
 	.menu-item {
 		margin: 0;
 		padding: 1rem;
+    font-size: 1.2rem;
 	}
 	.menu-item.active {
 		border-bottom: unset;
